# Messenger_TestTask

./: README.md  docker-compose.yml  pyproject.toml
client/: test_client.py  utils_and_const.py
server/: config.py  database.py  main.py  messages.py  models.py
